cpp/test/Slice/errorDetection/ClassRedefinition.ice
// **********************************************************************
//
// Copyright (c) 2001
// MutableRealms, Inc.
// Huntsville, AL, USA
//
// All Rights Reserved
//
// **********************************************************************

class Class1 { };
class Class1 { };
class Class1;

local class Class2 { };
local class Class2 { };
local class Class2;
